Add more panel files. Added file creation. Browse window allows user to select file location and checks for overwrite. Files are .gen and are blank currently

--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Evan/Downloads/miglayout-4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Evan/Documents/Workspace/Warriors Sim/mysql-connector-java-5.1.37-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Evan/Documents/Workspace/Warriors Sim/sqlite-jdbc-3.8.11.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
